# CITesting

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  buildAndExecutionTesting.sh  install_dependecies.sh  main.cpp
